change bg image format

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 
 body {
   margin: 0;
-  background-image: url('./bg.tiff');
+  background-image: url('./bg.jpeg');
   background-size: 100vw auto;
   width: 100vw;
   min-height: 100vh;
